Substitute the Pair/Pairs classes with an HashMap